# RSZD

./: .env.example  .gitignore  README.md  auto_updater.py  cleaner.py  config.py  cookie_manager.py  db.py  downloader.py  handlers.py  install.sh  main.py  pyproject.toml  requirements.txt  task_queue.py
.github/workflows/: ci.yml
rszdownloader/: __init__.py  app.py  auto_updater.py  cleaner.py  config.py  cookie_manager.py  db.py  downloader.py  handlers.py  task_queue.py
src/: __init__.py  app.py  auto_updater.py  cleaner.py  config.py  cookie_manager.py  db.py  downloader.py  handlers.py
tests/: test_cache_db.py  test_cookie_manager.py  test_downloader_utils.py  test_service_registry.py
